[tool.poetry]
name = "sneaker-bot"
version = "0.1.0"
description = ""
authors = ["Kirill <bondarenkokirill150208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.20.0.post0"
python-dotenv = "^1.1.1"
feedparser = "^6.0.11"
bs4 = "^0.0.2"
lxml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
